# nomos-interview

./: .gitignore  Cargo.toml  ideas.md
cli/: Cargo.toml
cli/src/: errors.rs  lib.rs  messages.rs  services.rs  settings.rs  utils.rs
cli/src/backends/: backend.rs  backends.rs  errors.rs  gallery.rs  gallery_settings.rs  mod.rs  questions.rs  questions_settings.rs  utils.rs
cli/src/utils/: mod.rs  terminal_utils.rs  viuer_utils.rs
game/: Cargo.toml
game/src/: main.rs  nft.rs  pokemon.rs
migrations/: 20241016124235_initialize_score_table.sql
persistence/: Cargo.toml
persistence/src/: errors.rs  lib.rs  services.rs  settings.rs
persistence/src/messages/: handleable_message.rs  mod.rs  questions_message.rs
questions_repository/: Cargo.toml
questions_repository/src/: errors.rs  lib.rs  messages.rs  questions.rs  services.rs
questions_repository/src/backends/: backend.rs  errors.rs  pokemon.rs
repository/: Cargo.toml  settings.conf
repository/src/: entities.rs  errors.rs  lib.rs  messages.rs  services.rs  utils.rs
repository/src/backends/: backend.rs  backend_message.rs  errors.rs  mod.rs  nftscan.rs  nftscan_serializers.rs  nftscan_settings.rs  pokemon.rs  pokemon_serializers.rs  pokemon_settings.rs
repository/src/entities/: image_guess.rs  mod.rs  ranked_image.rs
src/: main.rs
src/cli/: errors.rs  messages.rs  mod.rs  service.rs  utils.rs
src/questions_repository/: errors.rs  messages.rs  mod.rs  question.rs  service.rs
src/questions_repository/backends/: backend.rs  backend_message.rs  errors.rs  mod.rs  pokemon.rs
