[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
questions_repository = { path = "../questions_repository" }
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "2f70806" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", rev = "ac28d01" }
tracing = "0.1.40"
async-trait = "0.1.83"
viuer = "0.7.1"
thiserror = "1.0.64"
