[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "../cli" }
repository = { path = "../repository" }
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "2f70806" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", rev = "ac28d01" }
tracing = "0.1.40"
