[package]
name = "questions_repository"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "../cli" }
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "2f70806" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", rev = "ac28d01" }
tracing = "0.1.40"
async-trait = "0.1.83"
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
image = "0.24.9"
thiserror = "1.0.64"
